# torah-game-bot

./: CHANGELOG.md  NAVIGATION.md  README.md  SUMMARY.md
Bot/: .cursorrules  .env.example  .gitignore  CURSOR_TRANSFER.md  DEVELOPMENT.md  MIGRATION_GUIDE.md  README.md  TRANSFER_SUMMARY.md  pyproject.toml  replit.md  requirements.txt  unified_webhook_service.py
Bot/docs/: DEPLOYMENT_SUMMARY.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT_READY.md
Bot/src/config/: deployment_config.py
Bot/src/core/: audit_logger.py  config.py  db_advisory_locks.py  error_handling.py  internal_scheduler.py  rate_limiter.py  service_container.py  service_factories.py  telegram_security.py  user_context.py  validation.py
Bot/src/database/: backup_manager.py  init_database.py  newsletter_schema.sql
Bot/src/newsletter_api/: __init__.py  client.py  service.py
Bot/src/torah_bot/: __init__.py  admin_commands.py  broadcast_system.py  constants.py  http_utils.py  logger_config.py  (+8 more)
Bot/src/torah_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Bot/tests/: run_all_tests.py  test_admin_commands.py  test_backup_system.py  test_broadcast_migration.py  test_complete_newsletter_system.py  test_database_init.py  test_deployment_config.py  test_image_fallback_system.py  test_image_generation.py  test_integration_runner.py  test_language_integration.py  test_master_runner.py  test_newsletter_api_microservice.py  test_newsletter_integration.py  test_newsletter_manager.py  test_prompt_loader.py  test_quiz_topics.py  test_simple_bot.py  test_webhook_auto_subscription.py
(+70 files in other folders)
