[project]
name = "torah-bot"
version = "5.0.0"
description = "🎮 Torah Bot: AI-powered Jewish wisdom education with Shabbat Runner Mini App game"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "openai>=1.101.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.1.1",
    "schedule>=1.2.2",
    "uvicorn[standard]>=0.35.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]  
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
